# voxel

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: block_type.h  camera.c  camera.h  chunk.c  chunk.h  load_shader.c  load_shader.h  main.c  mat4.c  mat4.h  math_util.c  math_util.h  read_file.c  read_file.h  transform.h  vec2.c  vec2.h  vec3.c  vec3.h  vector.c  vector.h  world.c  world.h
